# crodino

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_bozo.py
config/: default.yaml  fast.yaml
docs/references/: demystifying-evals-for-ai-agents.md
graders/: __init__.py  code_grader.py  model_grader.py
harness/: __init__.py  __main__.py  metrics.py  runner.py
results/: .transcripts_20260309_234217.json.swp  summary_20260309_220106.json  summary_20260309_220222.json  summary_20260309_234217.json  transcripts_20260309_220106.json  transcripts_20260309_220222.json  transcripts_20260309_234217.json
tasks/metacognitive_controls/: context_awareness.yaml  evaluation.yaml  goal_management.yaml  self_awareness.yaml  strategy_selection.yaml
tasks/reasoning_invariants/: compositionality.yaml  conceptual_processing.yaml  logical_coherence.yaml  productivity.yaml
tasks/reasoning_operations/: abstraction.yaml  adaptive_detail_management.yaml  backtracking.yaml  backward_chaining.yaml  context_alignment.yaml  decomposition_and_integration.yaml  forward_chaining.yaml  knowledge_alignment.yaml  pattern_recognition.yaml  representational_restructuring.yaml  selective_attention.yaml  verification.yaml
tasks/reasoning_representations/: causal_organization.yaml  hierarchical_organization.yaml  network_organization.yaml  ordinal_organization.yaml  sequential_organization.yaml  (+2 more)
taxonomy/: cognitive_elements.yaml
tests/: test_graders.py  test_harness.py  test_tasks.py  test_taxonomy.py
web/: index.html  package-lock.json  package.json  tsconfig.app.json
(+16 files in other folders)
